oxiplate-derive/tests/broken/numbers/bad-binary.stderr
error: Expected an expression.
 --> tests/broken/numbers/bad-binary.rs:4:23
  |
4 | #[oxiplate_inline("{{ 0b }}")]
  |                       ^^^^^
